# STR_2

./: .gitignore  README.md  compile_and_run_p1.sh  compile_and_run_p2.sh  compile_and_run_p3_1.sh  compile_and_run_p3_2.sh  main  main.c  makefile  p1  p1.c  p2  p2.c  p3.c  p4  p4.c  p5  p5.c  str23_tp02_notes.txt
Data/: distances_filt.txt  point_cloud1_alt.txt
Output Samples/: P1_OUTPUT.txt  P2_OUTPUT.txt  P3_OUTPUT.txt  P4_OUTPUT.txt  P5_OUTPUT.txt
aux_libs/: comp_defines.h  linked_list.h  str_functions.c  str_functions.h
ros_foxy/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_foxy/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros_foxy/src/cpp_pubsub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_foxy/src/cpp_pubsub/install/cpp_pubsub/lib/cpp_pubsub/: talker
ros_foxy/src/cpp_pubsub/install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
ros_foxy/src/cpp_pubsub/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
ros_foxy/src/cpp_pubsub/src/: publisher_member_function.cpp
ros_foxy/src/cpp_pubsub/src/Data/: point_cloud1_alt.txt
ros_foxy/src/cpp_pubsub/src/install/: local_setup.sh
ros_foxy/src/pcl_pubview/: CMakeLists.txt
ros_foxy/src/str_ROS2/: CMakeLists.txt
ros_noetic/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_noetic/src/cpp_pubsub/: CMakeLists.txt  package.xml
str_ROS2/: package.xml
str_ROS2/include/str_ROS2/: str_functions.hpp
str_ROS2/src/: str_functions.cpp  str_node.cpp
(+45 files in other folders)
